--- a/pnpm/.gitignore
+++ b/pnpm/.gitignore
@@ -1,4 +1,3 @@
-
 .nx/installation
 .nx/cache
 .nx/workspace-data
@@ -6,3 +5,5 @@
 
 .cursor/rules/nx-rules.mdc
 .github/instructions/nx.instructions.md
+vite.config.*.timestamp*
+vitest.config.*.timestamp*
